# SentinelScan

./: README.md  pyproject.toml
sentinelscan/: __init__.py  cli.py  online.py  scanner.py  signatures.json  utils.py
sentinelscan/yara_rules/: default.yar
